--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
 				</div>
 				<ul class="menu-items">
 					<li><a href="#">Home</a></li>
-					<li><a href="#">Trainers</a></li>
-					<li><a href="#">Programs</a></li>
-					<li><a href="#">Experience</a></li>
-					<li><a href="#">Pricing</a></li>
-					<li><a href="#">Contact</a></li>
+					<li><a href="#trainers">Trainers</a></li>
+					<li><a href="#classes">Programs</a></li>
+					<li><a href="#blogs">Blogs</a></li>
+					<li><a href="#pricing">Pricing</a></li>
+					<li><a href="#footer">Contact</a></li>
 				</ul>
 
 				<!-- <div class="button">Join Now</div> -->
@@ -43,7 +43,7 @@
 			</div>
 		</section>
 
-		<section class="classes">
+		<section id="classes" class="classes">
 			<div class="container">
 				<div class="grid">
 					<div class="left-sec">
@@ -106,7 +106,7 @@
 			</div>
 		</section>
 
-		<section class="workout-trainers">
+		<section id="trainers" class="workout-trainers">
 			<div class="container">
 				<div class="flex">
 					<div class="workout-details">
@@ -128,7 +128,7 @@
 			</div>
 		</section>
 
-		<section class="blog-sec">
+		<section id="blogs" class="blog-sec">
 			<div class="container">
 				<div class="blog-sec-heading section-heading reveal-text">Blog</div>
 				<div class="blog-sec-body">Stay inspired and informed with fitness tips, expert advice, and wellness stories tailored to your journey.</div>
@@ -160,7 +160,7 @@
 			</div>
 		</section>
 
-		<section class="pricing-sec">
+		<section id="pricing" class="pricing-sec">
 			<div class="container">
 				<div class="pricing-sec-head section-heading reveal-text">Pricing Plans</div>
 				<div class="pricing-sec-body">Affordable, flexible plans designed to fit your fitness goals. Choose the perfect package and start your transformation today.</div>
@@ -243,7 +243,7 @@
 			</div>
 		</section>
 
-		<footer class="footer">
+		<footer id="footer" class="footer">
 			<div class="container">
 				<a href="#" class="brand">Fitopia</a>
 				<div class="grid">
